:package: Função iniciar jogo e animações

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 body {
-	background-image: url(../imgs/fundo.jpg);
+	background-image: url(../img/fundo.jpg);
 }
 
 #container{
@@ -25,7 +25,7 @@ body {
 #fundoGame {
 	width           : 950px;
 	height          : 630px;
-	background-image: url(../imgs/fundo_game.jpg);
+	background-image: url(../img/fundo_game.jpg);
 	border-color    : #FFF;
 	border-style    : solid;
 }
@@ -36,7 +36,7 @@ body {
 	position        : absolute;
 	left            : 8px;
 	top             : 179px;
-	background-image: url(../imgs/apache.png);
+	background-image: url(../img/apache.png);
 
 }
 
@@ -46,7 +46,7 @@ body {
 	position        : absolute;
 	left            : 689px;
 	top             : 253px;
-	background-image: url(../imgs/inimigo1.png);
+	background-image: url(../img/inimigo1.png);
 	
 }
 
@@ -56,7 +56,7 @@ body {
 	position        : absolute;
 	left            : 775px;
 	top             : 447px;
-	background-image: url(../imgs/inimigo2.png);
+	background-image: url(../img/inimigo2.png);
 }
 
 #amigo {
@@ -78,3 +78,84 @@ body {
 	text-align      : center;
 	padding         : 10px;
 }
+
+.anima1 {
+	background-image: url(..img/helicoptero.png);
+	animation       : play .5s steps(2) infinite;
+
+	-webkit-animation: play .5s steps(2) infinite;
+	-moz-animation   : play .5s steps(2) infinite;
+	-ms-animation    : play .5s steps(2) infinite;
+	-o-animation     : play .5s steps(2) infinite;
+}
+
+@keyframes play {
+	from {background-position:0px; }
+	to {background-position:-512px; }
+}
+
+
+@-webkit-keyframes play {
+	from { background-position:0px; }
+	to { background-position: -512px; }
+}
+
+@-moz-keyframes play {
+	from { background-position:0px; }
+	to { background-position: -512px; }
+}
+
+@-ms-keyframes play {
+	from { background-position:0px; }
+	to { background-position: -512px; }
+}
+
+@-o-keyframes play {
+	from { background-position:0px; }
+	to { background-position: -512px; }
+}
+
+.anima2 {
+    background-image : url(../img/inimigo1.png);
+    animation        : play .5s steps(2) infinite;
+    -webkit-animation: play .5s steps(2) infinite;
+    -moz-animation   : play .5s steps(2) infinite;
+    -ms-animation    : play .5s steps(2) infinite;
+    -o-animation     : play .5s steps(2) infinite;
+}
+
+
+.anima3 {
+	background-image : url(../img/amigo.png);
+	animation        : play2 .9s steps(12) infinite;
+	-webkit-animation: play2 .9s steps(12) infinite;
+	-moz-animation   : play2 .9s steps(12) infinite;
+	-ms-animation    : play2 .9s steps(12) infinite;
+	-o-animation     : play2 .9s steps(12) infinite;
+}
+
+@keyframes play2 {
+	from {background-position:0px;}
+	to {background-position:-528px;}
+}
+
+@-webkit-keyframes play2 {
+	from { background-position:    0px; }
+	to { background-position: -528px; }
+}
+
+@-moz-keyframes play2 {
+	from { background-position:    0px; }
+	to { background-position: -528px; }
+}
+
+@-ms-keyframes play2 {
+	from { background-position:    0px; }
+	to { background-position: -528px; }
+}
+
+@-o-keyframes play2 {
+	from { background-position:    0px; }
+	to { background-position: -528px; }
+}
+
