--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,10 @@ body {
 	to { background-position: -528px; }
 }
 
+#disparo {
+	width           : 50px;
+	height          : 8px;
+	position        : absolute;
+	background-image: url(../img/disparo.png);
+}
+
