--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,17 @@ body {
 	to { background-position: -308px; }
 }
 
+#placar {
+	width   : 450px;
+	height  : 50px;
+	position: absolute;
+	left    : 5px;
+	top     : 590px;
+}
+
+h2 {
+	font-family: Titulo;
+	font-size  : 20px;
+	color      : #FFF
+}
+
